docs: improve description, add more advice

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-roving-tabindex-2",
-  "description": "A simple React implementation of roving tabindex",
+  "description": "A simple and flexible React implementation of roving tabindex",
   "license": "Apache-2.0",
   "version": "1.0.0",
   "author": {
